--- a/Documentation/Report/Parts/Toolchain.tex
+++ b/Documentation/Report/Parts/Toolchain.tex
@@ -1,10 +1,11 @@
 \authoredSection{corny}{Toolchain}
-Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools angewiesen sein würden. So musste unser Quelltext versioniert, die grobe Struktur und Views festgehalten und Aufgabenpakete erstellt und koordiniert werden. Darüber hinaus war uns auch Design und Qualität wichtig. Auf unsere Erfahrungen in diesem Zusammenhang gehen wir im folgenden Abschnitt ein.
+Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools angewiesen sein würden. So musste unser Quelltext versioniert, die grobe Struktur und Views festgehalten und Aufgabenpakete erstellt und koordiniert werden. Darüber hinaus waren uns auch Design und Qualität wichtig. Auf unsere Erfahrungen in diesem Zusammenhang gehen wir im folgenden Abschnitt ein.
 
 \subsection{Agiles Vorgehen im Projekt}
-	Da uns freundlicherweise von C1 WPS die Möglichkeit gegeben wurde, eine Scrum-Zer\-ti\-fi\-zie\-rung zu erhalten, lag uns viel daran, den Scrum-Ansatz so gut es ging in unseren Projekt-Ablauf zu integrieren.
+	Da uns freundlicherweise von der C1 WPS GmbH die Möglichkeit gegeben wurde, eine Scrum-Zer\-ti\-fi\-zie\-rung zu erhalten, lag uns viel daran, den Scrum-Ansatz so gut es ging in unseren Projekt-Ablauf zu integrieren. Zudem war es im Rahmen der wöchentlichen Projektdiskussion Vorgabe, den Fortschritt anhand eines Scrum-Tools dokumentiren zu können.
 	
-	Dazu verwendeten wir – nach ersten Versuchen mit GitHub-Issues – die Software PivotalTracker. Mit ihr können wir, wie in Abbildung \ref{fig:TrackerStories} dargestellt, einzelne Stories erstellen und überwachen. Ein großer Vorteil dabei war, dass Scrum-Iterationen automatisch von der Software generiert werden, berechnet durch unsere durchschnittliche Arbeitskraft (genannt „Velocity“)\footnote{\url{http://www.pivotaltracker.com/community/tracker-blog/velocity-matters}} und unseren Vorhersagen für den Aufwand einer Story angegeben durch Punkte.
+	Dazu verwendeten wir – nach ersten Versuchen mit GitHub-Issues – die Software PivotalTracker. Während GitHub zwar eine für andere Zwecke ausreichende Möglichkeit bietet, sogenannte Issues anzulegen und abzuarbeiten, kann PivotalTracker den gesamten Scrum-Ablauf abbulden.
+	Beispielsweise können wir, wie in Abbildung \ref{fig:TrackerStories} dargestellt, einzelne Stories erstellen und überwachen. Ein großer Vorteil dabei war, dass Scrum-Iterationen automatisch von der Software generiert werden, berechnet durch unsere durchschnittliche Arbeitskraft (genannt „Velocity“)\footnote{\url{http://www.pivotaltracker.com/community/tracker-blog/velocity-matters}} und unseren Vorhersagen für den Aufwand einer Story angegeben durch Punkte.
 	
 \begin{figure}[h!]
 	\centering
@@ -23,9 +24,9 @@ Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools ange
 \end{figure}
 
 \subsection{Versionsverwaltung und Informationsaustausch}
-	Um kollaborativ an einer Software zu arbeiten ist es selbstverständlich erforderlich, mit Quelltextversionierung zu arbeiten. Da bei uns Team-Mitgliedern die Erfahrung mit Git\footnote{\url{http://git-scm.com/}} aus dem Universitäts- und Arbeitsumfeld am größten war, viel unsere Wahl für ein \acs{VCS} darauf. Entscheidend dabei war auch der größere Komfort gegenüber Subversion und die Möglichkeit, die Plattform GitHub\footnote{\url{https://github.com/}} als Repository-Hoster und anfangs auch als Issue-Tracker zu verwenden. Wie unser Repository bei GitHub aussieht ist zu sehen in Abbildung \ref{fig:GitHubOverview}.
+	Um kollaborativ an einer Software zu arbeiten, ist es selbstverständlich erforderlich, mit Quelltextversionierung zu arbeiten. Da bei uns Team-Mitgliedern die Erfahrung mit Git\footnote{\url{http://git-scm.com/}} aus dem Universitäts- und Arbeitsumfeld am größten war, fiel unsere Wahl für ein \acs{VCS} darauf. Entscheidend dabei war auch der größere Komfort gegenüber Subversion und die Möglichkeit, die Plattform GitHub\footnote{\url{https://github.com/}} als Repository-Hoster und anfangs auch als Issue-Tracker zu verwenden. Wie unser Repository bei GitHub aussieht, ist in Abbildung \ref{fig:GitHubOverview} zu sehen.
 	
-	Ein weiteres nützliches Feature von GitHub für uns war außerdem ein Wiki, dargestellt in Abbildung \ref{fig:GitHubWiki}. In ihm tauschen wir Informationen aus wie beispielsweise erste Feature-Ideen oder Kontaktdaten aller Mitglieder. Allerdings nutzten wir es darüber hinaus auch für das Festlegen eines Arbeitsablaufs mit Xcode.
+	Ein weiteres nützliches Feature von GitHub für uns war außerdem ein Wiki, dargestellt in Abbildung \ref{fig:GitHubWiki}. In ihm tauschen wir Informationen aus, wie beispielsweise erste Feature-Ideen oder Kontaktdaten aller Mitglieder. Allerdings nutzten wir es darüber hinaus auch für das Festlegen eines Arbeitsablaufs mit Xcode.
 	
 \begin{figure}
 	\centering
