--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -115,6 +115,7 @@
 \newcommand{\currentAuthor}{kiba}
 \newcommand{\authoredSection}[2]{%
 	\renewcommand{\currentAuthor}{#1}%
+	\pagebreak
 	\section[#2]{#2 {\normalfont\sffamily\small von \csname name@#1\endcsname}}}
 \makeatother
 \renewcommand{\lstlistingname}{Programmausdruck}
